[package]
name = "pythonize"
version = "0.22.0"
authors = ["David Hewitt <1939362+davidhewitt@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.63"
license = "MIT"
description = "Serde Serializer & Deserializer from Rust <--> Python, backed by PyO3."
homepage = "https://github.com/davidhewitt/pythonize"
repository = "https://github.com/davidhewitt/pythonize"
documentation = "https://docs.rs/crate/pythonize/"


[dependencies]
serde = { version = "1.0", default-features = false, features = ["std"] }

[dependencies.pyo3]
git = "https://github.com/durable-code/pyo3"
branch = "nofreeze"
default-features = false

[dev-dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
maplit = "1.0.2"
serde_path_to_error = "0.1.15"

[dev-dependencies.pyo3]
git = "https://github.com/durable-code/pyo3"
branch = "nofreeze"
features = ["auto-initialize", "macros", "py-clone"]

